Make sure link color is black on mobile

--- a/index.less
+++ b/index.less
@@ -23,6 +23,7 @@ body {
 }
 
 a:link {
+	color: black;
 	text-decoration: none;
 }
 
